[tool.poetry]
name = "asrun-analyzer"
version = "0.1.0"
description = "AsRun Analysis System"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.28"
paramiko = "^3.4.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
schedule = "^1.2.1"
pydantic = "^2.6.3"
python-multipart = "^0.0.17"
anthropic = "^0.39.0"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
